--- a/src/styles.css
+++ b/src/styles.css
@@ -14,11 +14,13 @@ h1 {
     grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 3;
-    z-index: 2;
+    z-index: 1;
+    background-color: brown;
  }
  .box2 {
     grid-column-start: 1;
     grid-row-start: 2;
     grid-row-end: 4;
-    z-index: 1;
+    z-index: 2;
+    background-color: coral;
  }
